lots of work in barcelona cafe - adding notes

--- a/_posts/thesis_chapters/2024-6-5-Design.md
+++ b/_posts/thesis_chapters/2024-6-5-Design.md
@@ -981,14 +981,23 @@ BE SURE TO CHECK THAT IT IS!
 
 In this section, I review data to describe some of the emerging playtesting behaviours of participants in relation to the introduced learning design.
 
+#### Local playtesting rather than participation with a wider online community
+
+While there is convincing research on on how online community  can engender feelings of agency and motivation [ROQUE AND ITO AND GEE], I chose not to connect with existing online communities in this learning design. Online communities can serve as a form of authentic feedback as explored in the Scratch and New Grounds community websites. However, the process of being involved in an online community and in addition learning the processes of participation diverts time and focus from other activities including real life playtesting. In addition, given the use in the design of an authentic web technology coding environment, a suitable online community pitched at children or even at novices was not apparent.
+
+In addition, the diversity of creations available on a online community may also have detracted from the more shared experience of the template used. Not offering a choice of starting game helped this shared technical and cultural base.     
+
+#### Playtesting and the interaction with UMC pedagogy and half-baked games approaches
+
+
 My broad observations align with the supported benefits outlined in research on the Use-Modify-Create (UMC)  [-@lytle_use_2019-1] and particularly the technique of starging with  half baked games [@grizioti_game_2018-1].
 
 MAKE A SUMMARY OF UMC / HALF BAKED BENEFITS EXPLICIT HERE.
 A benefit explored above is the scaffolding and the affordences provided by the code template. These technical supports became manifested in the social and cultural processes primarily through playtesting of the diversity of games created by participants.
 
-In journal notes, I observed that the shift of process from a more open creation in P1 one to the use of a _half-baked_ templated greatly increased the amount of time participants spent playtesting their own and other games. In P2, while the process of peer playtesting was encouraged in the latter third of each two hoour session it was not explicitly guided. Quickly complex patterns of playtesting emerged.
+In journal notes, I observed that the shift of process from a more open creation in P1 one to the use of a _half-baked_ templated greatly increased the amount of time participants spent playtesting their own and other games. In P2, while the process of peer playtesting was encouraged in the latter third of each two hour session it was not explicitly guided. Quickly complex patterns of playtesting emerged.
 
-I noted my own concern if errors compounded to make the participants game unplayable for any extended time. In video data, participants show frustrastion if not able to playtest game due to errors (for a clear example see Olivia and Suzanna's frustration in Appendix 5.x.)
+I noted my own concern if errors compounded to make the participants game unplayable for any extended time. In video data, participants show frustration if not able to playtest game due to errors (for a clear example see Olivia and Suzanna's frustration in Appendix 5.x.)
 
 
 #### Playtesting facilitating peer encouragement
@@ -1055,22 +1064,15 @@ Ed gives a more technical explanation from  involving the naming of the variable
 
 Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
 
-The indirect norming behaviours ... described in previous chapter ...  mirror observations seen in the work of Rogoff and colleagues[@rogoff_cultural_2003] on learning in  community settings. There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
+The indirect norming behaviours ... described in previous chapter ...  mirror observations seen in the work of Rogoff and colleagues[@rogoff_cultural_2003] on learning in  community settings.
 
-To better understand this process it is relevant to locate the source of these wider expectations and to evaluate their utility here. This is attempted in the discussion section of the chapter.
+There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
+
+
 
 What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
 
-
-
-
-#### Local playtesting rather than participation with a wider online community
-
-There is convincing research on on how online community  can engender feelings of agency and motivation . FIND THIS - ROQUE AND ITO AND GEE. Thus, a possible question to level at the evolution of this design is why not engage with online communities as a form of authentic audience and as source of feedback as explored in the Scratch and New Grounds community websites.
-
-A primary concern here were the time consideration of the process of being involved in an online community may remove time spent doing real life playtesting. Also there is a danger that, the diversity of creations available on a online community  could remove the more communal experience of the designed limitations.
-
-More pragmatically, in this situation the use of a more professional framework, and a lack of dedicated site run for children reduced the scope for this kind of interaction.   
+This process is an example of an emerging process where cultural concepts are mutually constituted by all actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
 
 
 <!-- #### A game encouraging maker / player types
@@ -1095,70 +1097,63 @@ The success of activity spurred the creation of the creation of side-missions to
 
 AND - link more -->
 
-### On a drama processes
+
+
+
+#### Motivations and genesis of the drama process (what kind of Maker are you)
+
+By the end of P2 most of the tools and main processes were in place. But I still felt tensions around introducing reflective processes and wanted to de-centre myself where possible from a teacher position. My journal notes detail an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers.
+
+In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals, taking inspiration from Bartle's game player types [@hamari_player_2014], identifying social makers, planners, magpies and glitchers.  
+
+-   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game   
+- **Planners:** like to study to build knowledge of the tools before they build up their game step-by-step following instructions
+-   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
+-   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
+
+I saw potential value here to address the danger internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches [@papert_epistemological_1990]. Thus, in P2 I introduced a starter game in which families moved into different quadrants of the room in answering questions on the Bartle test. This process celebrated different game playing types and allowed a public sharing of previously hidden gaming preferences, although for some non-gaming parents and children I had to ask them to use their imagination. Several parents noted that this process gave them great insight into how their child identified within the cultures of the games they played.
+
+After the process of playing a game I shared my proposition that there different game maker types. I asked participants to evaluate and discuss with peers what kind of game maker they were from the list above. This process was not explicitly used in later reflections however parent Mark made the following comment in post-session P3 interviews.
+
+    We used the instructions, we like to plod.
+
+![Illustration 4.x - What kind of game maker are you  ](./Pictures/kindofgamemaker.png){width=95%}
+
+I used the question "What kind of game maker are you?" as an indicator to participants that one aim of the project was to create a space where different approaches are possible and celebrated. To communicate this approach, as well as starting game activity, I incorporated the question into an animation of the resources home page (see illustration 4.x). In P3 the underlying ideas were incorporated into the process drama described in the next section.
+
+<!-- #### A game encouraging maker / player types
+
+The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
+
+The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
+
+The process was very engaging, parents responded that the process gave them new insight into the digital identities of their children. As part of the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
+
+-   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
+- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
+-   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
+-   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
+
+
+DATA REQUIRED FROM VIDEO!?
+
+This self evaluation helped confirm my own observations of different motivations driving different participation behaviours. Fuller discussion follows in chapter six.
+
+The success of activity spurred the creation of the creation of side-missions to be carried out in from of a dramatic process.
+
+AND - link more -->
+
+
+
+### Description drama process using extracts from vignettes and concepts of MoE
 
 The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming.
 
 
 The drama process is an example of an introduced cultural tool. The process acts as wrapper to several supporting techniques. the side missions to and to sanction different approaches, the imagined audience encourages reflection and semi-authentic approaches. It is the most advanced tools of a range that was put into place to create a space suitable for creativity, collaboration and self expression.
 
+The following sections use concepts explored by Bolton and Heathcote from MoE processes to situate the drama process used the drama intervention used in the context of P3 [@aitken_dorothy_2013].
 
-#### Motivations and genesis of the drama process (what kind of Maker are you)
-
-By the end of p2 most of the tools and main processes were in place.
-
-But I still felt tensions around introducing reflective processes and wanted to de-centre myself where possible from a teacher position.
-
-Before talking about drama process which addressed this in varies ways.
-
-A smaller intervention was a game and at kind of player are you.
-
-A game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
-
-The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
-
-After the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
-
--   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
-- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
--   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
--   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
-
-
-
-This simple question "What kind of game maker are you?" - is a good indicator to others that you are trying to create a space where different approaches are possible and celebrated.
-
-I incorporated it into an animation of the resources home page.
-
-![Illustration 4.x - What kind of game maker are you  ](./Pictures/kindofgamemaker.png){width=95%}
-
-
-
-<!-- #### A game encouraging maker / player types
-
-The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
-
-The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
-
-The process was very engaging, parents responded that the process gave them new insight into the digital identities of their children. As part of the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
-
--   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
-- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
--   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
--   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
-
-
-DATA REQUIRED FROM VIDEO!?
-
-This self evaluation helped confirm my own observations of different motivations driving different participation behaviours. Fuller discussion follows in chapter six.
-
-The success of activity spurred the creation of the creation of side-missions to be carried out in from of a dramatic process.
-
-AND - link more -->
-
-My journal notes detail an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals, taking inspiration from Bartle's game player types [@hamari_player_2014], idenifying social makers, planners, magpies and glitchers. See appendix 4.x . I saw potential value here to address internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches [@papert_epistemological_1990]. In P2 I introduced a starter game which celebrated different game playing and making types which is also described in appendix 4.x. In P3 the underlying ideas were incorporated into the process drama described in the next section.
-
-#### Description drama process using extracts from vignettes and concepts of MoE
 
 <!-- q: How much to reference back to previous chapter? -->
 
@@ -1166,7 +1161,12 @@ My journal notes detail an evolution of attempts to try to build into the progra
 
 <!-- After the  excerpt which introduces a dramatic scenario involving a fictional audience I orientate learners in suggested use of support documentation. A full transcript is available in the appendix which outlines that process. -->
 
-The drama process involved a fictional frame of aliens coming to judge the earth. An extract of how I introduce the drama frame, the main and side missions is included as appendix 4.x. Below is a short extract of the overall mission.
+
+
+**_Contracting into drama_**
+
+
+The drama process involved a fictional frame of aliens coming to judge the earth.  An extract of how I introduce the drama frame, the main and side missions is included as appendix 4.x. Below is a short extract of the overall mission.
 
     We have some guidelines:
 
@@ -1179,11 +1179,8 @@ The drama process involved a fictional frame of aliens coming to judge the earth
 
 _Extract from Appendix 4.x: Vignette of introduction of the drama process_
 
-The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert (MoE) and other process drama techniques (explored in Lit Review). The following section outlines key characteristics MoE [@aitken_dorothy_2013] in context.
+The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert (MoE)
 
-
-
-**_Contracting into drama_**
 
 As a facilitator, I indicate that we are entering a dramatic process and attempt to draw everyone into a commitment to the process. The collusion is noted by both parents and children in recorded exchanges. For example, after engaging with a code example provided by myself in the role of the aliens, one pair make the following comment.
 
@@ -1215,6 +1212,12 @@ One key activity that was carried out in role in P3 was end of session reflectio
 
 Vignette 4.1.b  illustrates this  process. In the extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants, which along with social missions are explored in the following section.
 
+In addition to the careful technical and pedagogical creation and organisation of resources undertaken in P2, in P3 I sought a way for participants to be aware of and access relevant documentation without interrupting their creative flow or the fun of the experiences. To address this in P3, as part of the drama process, I encouraged participants to write to the aliens to ask help in a shared online document. The full process is described in appendix 4.x and participant reactions are explored in Chapter 7.
+
+
+<!-- In P1, with the aim of My aim was to create a peer community helping each other, I created a mailing list for participants to ask technical and code questions of the wider group.  However, this email list was hardly used for this purpose. Two parents shared that they were reluctant to bother other participants with their own issues. -->
+
+
 <!-- Choices
 - an overview of Mi's interactions on 2019-03-18 - home interests of art, community help, playtesting and being playtested, use of tools, Molly:as a social coder compared to others.
 - Or could look at the whole family unit mi, zi and ne - And their interactions with alien narrative. -->
@@ -1240,7 +1243,10 @@ https://playthinklearn.net/blog/ten-steps-to-game-design/ -->
 Perhaps add back in as an unintended consequence?
 The live chat process started unintentionally as one child was left to their own devices as a parent was undertaking a social mission (see below and previous chapter). -->
 
-One of the activities that participants carried out within the frame of the drama process was the undertaking of side-missions. These missions encouraged community-focused patterns of behaviour which I had observed in previous iterations of game making and via the game on playing and making types described above. These were activities not directly related to game making process. They were designed to encourage the exploration of the games of others, to encourage a playful approach. I had identified these behaviours as potentially helpful in maintaining the positive affect and identification with the on-going group process of game making. An extract of the table of both social and secret missions follows (a full table is available as Appendix 4.x). These mission were printed out on cards and one of each type was given to the participants in the first half of the first two sessions.
+One of the activities that participants carried out within the frame of the drama process was the undertaking of side-missions. In this section I outline the motivation behind the development of the missions and begin to analyse a framing of the missions within the AT concept of dual stimulation.  
+
+
+These missions encouraged community-focused patterns of behaviour which I had observed in previous iterations of game making and via the game on playing and making types described above. These were activities not directly related to game making process. They were designed to encourage the exploration of the games of others, to encourage a playful approach. I had identified these behaviours as potentially helpful in maintaining the positive affect and identification with the on-going group process of game making. An extract of the table of both social and secret missions follows (a full table is available as Appendix 4.x). These mission were printed out on cards and one of each type was given to the participants in the first half of the first two sessions.
 
 <!-- AN EXAMPLE HELPFUL? -->
 
@@ -1353,7 +1359,9 @@ Behaviours related to playtesting have been described here with support from dat
 
 The motivations of introducing drama process and social missions were to reinforce social and cultural elements many of which emerged during semi-structured playtesting.
 
-Evidence of the potential of those on the drama process are explored in chapter 7. In the next section I collate a summary picture of significant barriers experienced and key responses in design to them. 
+LINKING SECTION HERE PRECEEDING LATER CONCEPTUAL EXPLORATION OF DUAL STIMUATION AND PLAY SPACE THEORY.
+
+Evidence of the potential of those on the drama process are explored in chapter 7. In the next section I collate a summary picture of significant barriers experienced and key responses in design to them.
 
 
 ## Chapter Discussion
