--- a/_posts/thesis_chapters/2024-6-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-6-6-Gdps.md
@@ -1210,11 +1210,6 @@ Designing for others - as a key per.spective in constructionism.
 Note: What added insights or tips for practitioners can I bring here?
 NOTE - cf Resnick Designing for Tinkerability - and the concepts in that.  -->
 
-####  GDPs, the scale/nature of project goals & designing for others
-
-**GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.** - is this feedback cultural or guided participation - discuss?
-
-This process involves shifts in perspectives from participants as they engaging with objectives on different scopes of activity. For example, participants may get caught up in a particular design goal on a micro-level, engagement may drive an implementation of a quirky characteristic. When this game is self-tested or playtested, that characteristic may not withstand the shift in perspective to the wider goal of making an engaging game if it interferes with the engagement of the test suers.
 
 <!-- - clear terms to use as a lingua-franca during self testing and playtesting. -->
 
@@ -1231,9 +1226,19 @@ In interpreting data there were other examples of pair partners and peers either
 
 #### GDP concepts and language used in informal feedback for peers to influence modification of games
 
+
+**GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.** - is this feedback cultural or guided participation - HOW IS THIS DIFFERENT FROM WHAT IS EXPLORED IN NAVIGATION?
+
+This process involves shifts in perspectives from participants as they engaging with objectives on different scopes of activity. For example, participants may get caught up in a particular design goal on a micro-level, engagement may drive an implementation of a quirky characteristic. When this game is self-tested or playtested, that characteristic may not withstand the shift in perspective to the wider goal of making an engaging game if it interferes with the engagement of the test suers.
+
+
 **The concepts of game challenge and game feel evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
+In Chapter 5 norming behaviour was identified as an emerging characteristic of playtesting in this setting. This section shares evidence of how GDPs help this process.
+
 The discussion of game challenge, specifically comment about how 'hard' participant games were as the most common interaction during playtesting.
+
+
 
 The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies. In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity.
 
@@ -1258,6 +1263,9 @@ She had been made aware by her daughter Ne about the relevant game variables. In
 
 
 Other children come and play the game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating." In interactions we can see a similar message coming from peers in the playtesting process. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of jump feel stemming from the personal experiences of the participants and from tangible feeling of lack of control over the player's character in the game.
+
+This form of interaction can be analysed using the professional framework called MDA. Mechanic is the jump  is ame mechanic, D is the ?, and A is the frustration experienced by fellow testers. Further parallels with MDA are explored later.
+
 
 <!-- We can see that Molly justifies the game feel of a very high fast jump with a narrative response about the character being spaceman. However, the limited amount of time anyone plays her game and her own frustration in playing it is telling. The game feel is frustrating in the wrong way here. Molly seems to initially misconstrue the feedback she is getting here equating her ability to make the game hard as a positive thing. However, towards the end she notes the frustrating nature of the game. -->
 
@@ -1323,12 +1331,25 @@ For example, the work of the child to add 21 levels to their own game served as 
 
 When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Toby.
 
-Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. The propagation here is emerges from and is completed entirely through peer activity. A different and more common pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+
+The propagation in the example above is completed entirely through peer activity rather than instruction or supporting resources. A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence.
+
+ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2.
+eg.
+
+Analysis of the working patterns stream of the coding schema shows 4 working units relying on peer sharing, 4 on faciliator and resource help and 2 only mostly self-driven in both identification and implementation.
+
+
 
 **New GDPs emerged from existing patterns through peer activity during playtesting**
 
 In addition to the propagation of main game design patterns, sub patterns and related design concepts emerged organically from the community. The concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
 DEVELOP
+
+These new patterns or elements of patterns sometime introduced new concepts and associated language into the community. When participants noticed the elements and used the relevant terminology, they are engaging in what Wegner terms legitimate peripheral participation.
+
+While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
 
 <!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
 
@@ -1382,15 +1403,33 @@ Article on intangibility of game feel.
 <!-- #### Use of hazards and moving enemies - The placement of hazards as design pattern to increase challenge -->
 <!-- GDPs and play-testing interact to allow participants,  to support each other and build community in a diversity of ways. -->
 
+### Perhaps  add here a summary of cultural section if useful
+
+- FoK
+- affordances
+- shared language
+- idioculture
+- link to next chapter
+
+The distinction between cultural and guided activity is blurred but here the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note.
+
+What would Rogoff and Wegner and Lave find interesting here?
+Is the term idioculture helpful to summarise the observation in this section.
+
+The cultural aspects of the learning community are further explored in Chapter 7.
+Is there something that merits mentioning here as a link?
 
 ## Discussion SECTION
 
-### To add here
+### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
 
 The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
 
-In this study , the game features are concrete
-The concept of design patterns is abstract
+In this study, experience of the features and behaviour of game are concrete. The concept of design pattern that can be applied to more than one game is more abstract. And more abstract still are computing concepts like abstraction and pattern recognition which are present in the game code and problem solving processes.
+
+TO ADD - The MDA framework , and related work on game design frameworks bring a focus to levels of abstraction. The utility LOA is promoted by Waite and Sentence in a focus of computing education [INSERT HOW AND WHY]. While, I chose not to explore this explicitly in my teaching, one potential avenue to explore is the question, is the design helping participants to make their concrete knowledge potentially transferable to other problems?
+
+
 
 Around this abstract different behaviour patterns form
 And the concept can be embodied on design artefacts
