--- a/_posts/thesis_chapters/tocs/2024-6-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-6-5-Design.md_toc.md
@@ -49,6 +49,12 @@
             processes](#social-coding-processes){#toc-social-coding-processes}
         -   [Playtesting as a cultural
             process](#playtesting-as-a-cultural-process){#toc-playtesting-as-a-cultural-process}
+            -   [Local playtesting rather than participation with a
+                wider online
+                community](#local-playtesting-rather-than-participation-with-a-wider-online-community){#toc-local-playtesting-rather-than-participation-with-a-wider-online-community}
+            -   [Playtesting and the interaction with UMC pedagogy and
+                half-baked games
+                approaches](#playtesting-and-the-interaction-with-umc-pedagogy-and-half-baked-games-approaches){#toc-playtesting-and-the-interaction-with-umc-pedagogy-and-half-baked-games-approaches}
             -   [Playtesting facilitating peer
                 encouragement](#playtesting-facilitating-peer-encouragement){#toc-playtesting-facilitating-peer-encouragement}
             -   [Playtesting and embodied participation in the games of
@@ -56,19 +62,16 @@
             -   [Community concepts and norming behaviour emerging
                 during
                 playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting){#toc-community-concepts-and-norming-behaviour-emerging-during-playtesting}
-            -   [Local playtesting rather than participation with a
-                wider online
-                community](#local-playtesting-rather-than-participation-with-a-wider-online-community){#toc-local-playtesting-rather-than-participation-with-a-wider-online-community}
-        -   [On a drama
-            processes](#on-a-drama-processes){#toc-on-a-drama-processes}
             -   [Motivations and genesis of the drama process (what kind
                 of Maker are
                 you)](#motivations-and-genesis-of-the-drama-process-what-kind-of-maker-are-you){#toc-motivations-and-genesis-of-the-drama-process-what-kind-of-maker-are-you}
-            -   [Description drama process using extracts from vignettes
-                and concepts of
-                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
+        -   [Description drama process using extracts from vignettes and
+            concepts of
+            MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices){#toc-use-of-side-missions-to-encourage-varied-creative-practices}
+        -   [Outroduction to this part of exploring Drama process and
+            playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting){#toc-outroduction-to-this-part-of-exploring-drama-process-and-playtesting}
     -   [Chapter
         Discussion](#chapter-discussion){#toc-chapter-discussion}
         -   [Summary of barriers and tensions explored in this
